--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -540,8 +540,15 @@
 
 <DeckCardDisplay>:
     orientation: "vertical"
+    canvas:
+        Color:
+            rgba: root.get_backdrop(root.blocked)
+        Rectangle:
+            size: self.size
+            pos: self.pos
     CardDisplay:
         card: root.card
+        color: root.get_shading(root.blocked)
     Label:
         size_hint: 1, .4
         text: "[b]" + root.card.name + "[/b]"
@@ -550,8 +557,13 @@
         halign: "center"
         valign: "middle"
     Label:
+        size_hint: 1, .75
         text: root.card.description
         text_size: self.size
         halign: "center"
         valign: "top"
+    Button:
+        size_hint: 1, .25
+        text: root.button_text(root.blocked)
+        on_release: root.clicked()
 
