--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -143,9 +143,11 @@
                 text_size: self.size
                 markup: True
                 size_hint: (1, .25)
+                valign: "middle"
             Label:
                 text: root.achievement.description
                 text_size: self.size
+                valign: "top"
     Widget:
         size_hint: 1, .5
 
@@ -169,9 +171,11 @@
             text_size: self.size
             markup: True
             size_hint: (1, .25)
+            valign: "middle"
         Label:
             text: root.achievement.description
             text_size: self.size
+            valign: "top"
     BoxLayout:
         orientation: "vertical"
         size_hint: (2, 1)
@@ -188,9 +192,11 @@
                     text_size: self.size
                     markup: True
                     size_hint: (1, .25)
+                    valign: "middle"
                 Label:
                     text: root.reward.description if root.reward is not None else ""
                     text_size: self.size
+                    valign: "top"
 
 
 <DealerDisplay>:
