Display Powerups for use, #5

--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -250,6 +250,14 @@
                 Widget:
 
 
+<PowerupIcon>:
+    canvas:
+        Rectangle:
+            texture: app.powerups_texture and app.get_powerup_texture(root.powerup)
+            size: min(self.size[0], self.size[1]), min(self.size[1], self.size[0])
+            pos: self.pos
+
+
 ## Tutorial Screens - gui/screens/tutorial.py ##
 
 <WinIntroScreen@Screen>:
