Add Icon to Purchase Confirmation

--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -259,7 +259,7 @@
         Rectangle:
             texture: app.powerups_texture and app.get_powerup_texture(root.powerup)
             size: min(self.size[0], self.size[1]), min(self.size[1], self.size[0])
-            pos: self.pos
+            pos: self.pos[0] + (self.size[0] - min(self.size[0], self.size[1])) / 2, self.pos[1] + (self.size[1] - min(self.size[0], self.size[1])) / 2
 
 
 ## Tutorial Screens - gui/screens/tutorial.py ##
