--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -475,6 +475,30 @@
 ## Powerup Screen - gui/screen/powerups.py ##
 #:import PowerupType rendezvous.PowerupType
 
+<ConfirmationPopup>:
+    BoxLayout:
+        PowerupIcon:
+            powerup: root.powerup
+            size_hint: .25, 1
+        BoxLayout:
+            id: main
+            orientation: "vertical"
+            size_hint: .75, 1
+            Label:
+                text: "Are you sure you would like to purchase this %s for %s %s%s?" % (root.item_name, root.powerup.price, root.currency, "s" if root.powerup.price != 1 else "") if root.powerup is not None else ""
+                valign: "middle"
+                halign: "center"
+            BoxLayout:
+                Widget:
+                Button:
+                    text: "YES"
+                    on_release: root.purchase()
+                Button:
+                    text: "no"
+                    on_release: root.dismiss()
+                Widget:
+
+
 <PowerupDisplay>:
     size_hint: 1, None
     Widget:
