--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -387,7 +387,7 @@
     Widget:
         canvas:
             Color:
-                rgba: 1, 1, 1, 1
+                rgba: (1, 1, 1, 1) if root.filename in app.backgrounds else (1, 1, 1, .5)
             Rectangle:
                 texture: app.background_catalog and app.get_bg_thumbnail(root.filename[:3])
                 size: min(self.size[0], self.size[1] * 5 / 3), min(self.size[1], self.size[0] * 3 / 5)
