Fill out tutorial
New modules for powerups, the endgame, a score analysis the first round,
and the win screen.

--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -246,26 +246,28 @@
 
 
 <WinnerScreen>:
-    BoxLayout:
-        orientation: "vertical"
-        ActionBar:
-            size_hint: (1, .075)
+    FloatLayout:
+        id: float
         BoxLayout:
             orientation: "vertical"
-            Carousel:
-                id: carousel
-                direction: "right"
-                size_hint: (1, 3)
-            Label:
-                text: "Play Again?"
+            ActionBar:
+                size_hint: (1, .075)
             BoxLayout:
-                size_hint: (1, .75)
-                Button:
-                    text: "YES"
-                    on_press: root.manager.play_again()
-                Button:
-                    text: "no"
-                    on_press: root.manager.switcher('home')
+                orientation: "vertical"
+                Carousel:
+                    id: carousel
+                    direction: "right"
+                    size_hint: (1, 3)
+                Label:
+                    text: "Play Again?"
+                BoxLayout:
+                    size_hint: (1, .75)
+                    Button:
+                        text: "YES"
+                        on_press: root.manager.play_again()
+                    Button:
+                        text: "no"
+                        on_press: root.manager.switcher('home')
 
 
 <RoundAchievementScreen>:
