Tutorial touchups; remove Help buttons

--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -486,9 +486,9 @@
                 source: "atlas://gui/homescreen/settings"
                 text_below: "Settings"
                 on_release: root.manager.switcher('settings')
-            HomeButton:
-                source: "atlas://gui/homescreen/help"
-                text_below: "Help"
+            #HomeButton:
+            #    source: "atlas://gui/homescreen/help"
+            #    text_below: "Help"
 
 
 ## Achievement Screen - gui/screens/achievement.py ##            
@@ -657,8 +657,8 @@
         ActionButton:
             text: "Settings"
             on_release: app.root.switcher('settings')
-        ActionButton:
-            text: "Help"
+        #ActionButton:
+        #    text: "Help"
         ActionOverflow:
 
 
