--- a/rendezvous.kv
+++ b/rendezvous.kv
@@ -382,6 +382,7 @@
                 text: "Cancel"
                 on_release: root.setting._dismiss()
 
+#:import GameSettings rendezvous.GameSettings
 <BackgroundDisplay>:
     orientation: "vertical"
     size_hint_y: None
@@ -389,11 +390,16 @@
     Widget:
         canvas:
             Color:
+                rgba: root.get_color(app.root)
+            Rectangle:
+                size: self.size[0], self.size[0] * 3 / 5
+                pos: self.pos
+            Color:
                 rgba: (1, 1, 1, 1) if (not root.label or (app.root is not None and root.filename in app.root.backgrounds.purchased)) else (1, 1, 1, .5)
             Rectangle:
                 texture: app.background_catalog and app.get_bg_thumbnail(root.index)
-                size: min(self.size[0], self.size[1] * 5 / 3), min(self.size[1], self.size[0] * 3 / 5)
-                pos: self.pos[0] + (self.size[0] - min(self.size[0], self.size[1] * 5 / 3)) / 2, self.pos[1]
+                size: self.size[0] * 0.95, self.size[0] * 3 / 5 * 0.95
+                pos: self.pos[0] + self.size[0] * 0.025, self.pos[1] + self.size[1] * 0.025
     Label:
         size_hint: (1, .2)
         text: '[b]' + root.get_name() + '[/b]' if (root.label and root.filename is not None) else ''
